[tool.poetry]
name = "python-grpc-demo"
version = "0.1.0"
description = ""
authors = ["Mrityunjay Saxena <14573967+mrityunjaygr8@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "^1.52.0"
grpcio = "^1.52.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
